# gtest-sample

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  util.cpp
test/: CMakeLists.txt  test_gcd.cpp
